Fix layout issues

--- a/src/+stats/sections/charts.module.scss
+++ b/src/+stats/sections/charts.module.scss
@@ -1,7 +1,6 @@
 @import '../../styles/index';
 
 .wrapper {
-  margin: -$sizes---padding;
   display: flex;
   flex-direction: column;
   height: 100%;
