--- a/src/components/dashboard-layout/dashboard-layout.module.scss
+++ b/src/components/dashboard-layout/dashboard-layout.module.scss
@@ -13,7 +13,6 @@ $dashboard-layout__sidebar---width: 300px !default;
   }
 
   &__content {
-    padding: $sizes---padding;
     flex: 1;
     border: solid gc(border);
     border-width: 0 1px;
